tests/eu.numberfour.n4js.transpiler.es5.tests/testdata/errors/ThrowFoo_SystemJS.n4js.xt
/* XPECT_SETUP eu.numberfour.n4js.transpiler.es5.xpect.tests.CompileAndExecuteTest END_SETUP */

/* XPECT outputRegex with SystemJS --- 
<==
stdout:
stderr:
foo\b(\s)+\bError loading\b(\s)+(.)+
==>
--- */
throw 'foo'
